# autoslm

./: .gitignore  README.md  pyproject.toml
autoslm/: __init__.py  audit.py  cli.py  config.py  orchestrator.py  telemetry.py
autoslm/agents/: __init__.py  trace_analyzer.py
autoslm/data/: acquire.py  curate.py  hard_negatives.py
autoslm/eval/: __init__.py  build_holdout.py  gliner_eval.py  harness.py  metrics.py
autoslm/modes/: cold_start.py  production.py
autoslm/sandbox/: __init__.py  modal_runner.py
autoslm/search/: __init__.py  expand.py  mcgs.py  pipeline.py
autoslm/tools/: registry.py
autoslm/traces/: __init__.py  calibration.py  ingest.py  probes.py  schema.sql
autoslm/train/: __init__.py  dispatch.py  dpo.py  gliner_train.py  inference.py  lora_sft.py
bench/: smoke_e2e.py
bench/adaptft/: __init__.py  build_scenario.py  perturbations.py
bench/repro/: __init__.py  _common.py  cold_start_arc.py  cold_start_gsm8k.py  cold_start_humaneval.py  prod_clinc150.py  prod_conll2003.py
configs/: fsdp.yaml
examples/: run_production.py
pioneer/: __init__.py  cli.py  config.py  orchestrator.py
pioneer/data/: __init__.py  cot_annotate.py  replay.py
pioneer/eval/: llm_judge.py
pioneer/llm/: __init__.py  client.py
pioneer/modes/: __init__.py  production.py
pioneer/search/: expand.py  (+1 more)
pioneer_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audit.py  test_calibration.py  test_cold_start_smoke.py  test_distributed_mcgs.py  test_gliner.py  test_imports.py  test_probes.py  test_ratchet.py
(+44 files in other folders)
